@@ -1,30 +1,13 @@
 #!/usr/bin/make -f
 
-PYTHONS:=$(shell pyversions -vr)
-PYTHON3S:=$(shell py3versions -vr)
-
 UPSTREAM_GIT := https://github.com/openstack/oslo.rootwrap.git
 include /usr/share/openstack-pkg-tools/pkgos.make
-
-export OSLO_PACKAGE_VERSION=$(VERSION)
 
 %:
 	dh $@ --buildsystem=python_distutils --with python2,python3
 
-override_dh_install:
-	set -e && for pyvers in $(PYTHONS); do \
-		python$$pyvers setup.py install --install-layout=deb \
-			--root $(CURDIR)/debian/python-oslo.rootwrap; \
-	done
-	set -e && for pyvers in $(PYTHON3S); do \
-		python$$pyvers setup.py install --install-layout=deb \
-			--root $(CURDIR)/debian/python3-oslo.rootwrap; \
-	done
-	rm -f $(CURDIR)/debian/python*-oslo.rootwrap/usr/lib/python*/dist-packages/*.pth
-	mv $(CURDIR)/debian/python-oslo.rootwrap/usr/bin/oslo-rootwrap $(CURDIR)/debian/python-oslo.rootwrap/usr/bin/python2-oslo-rootwrap
-	mv $(CURDIR)/debian/python3-oslo.rootwrap/usr/bin/oslo-rootwrap $(CURDIR)/debian/python3-oslo.rootwrap/usr/bin/python3-oslo-rootwrap
-	mv $(CURDIR)/debian/python-oslo.rootwrap/usr/bin/oslo-rootwrap-daemon $(CURDIR)/debian/python-oslo.rootwrap/usr/bin/python2-oslo-rootwrap-daemon
-	mv $(CURDIR)/debian/python3-oslo.rootwrap/usr/bin/oslo-rootwrap-daemon $(CURDIR)/debian/python3-oslo.rootwrap/usr/bin/python3-oslo-rootwrap-daemon
+override_dh_auto_install:
+	pkgos-dh_auto_install
 
 override_dh_clean:
 	dh_clean -O--buildsystem=python_distutils
@@ -32,16 +15,15 @@ override_dh_clean:
 
 override_dh_auto_test:
 ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-	@echo "===> Running tests"
-	set -ex && for i in 2.7 $(PYTHON3S) ; do \
-		PYMAJOR=`echo $$i | cut -d'.' -f1` ; \
-		echo "===> Testing with python$$i (python$$PYMAJOR)" ; \
-		rm -rf .testrepository ; \
-		testr-python$$PYMAJOR init ; \
-		TEMP_REZ=`mktemp -t` && \
-		PYTHONPATH=$(CURDIR) PYTHON=python$$i testr run --subunit 'oslo_rootwrap\.tests\.(?!.*test_rootwrap.RootwrapTestCase.test_KillFilter_renamed_exe.*|.*test_RootwrapConfig.*|.*RootwrapDaemonTest.*)' | tee $$TEMP_REZ | subunit2pyunit ; \
-		cat $$TEMP_REZ | subunit-filter -s --no-passthrough | subunit-stats ; \
-		rm -f $$TEMP_REZ ; \
-		testr slowest ; \
-	done
+	pkgos-dh_auto_test 'oslo_rootwrap\.tests\.(?!.*test_rootwrap.RootwrapTestCase.test_KillFilter_renamed_exe.*|.*test_RootwrapConfig.*|.*RootwrapDaemonTest.*)'
 endif
+
+# Commands not to run
+override_dh_installcatalogs:
+override_dh_installemacsen override_dh_installifupdown:
+override_dh_installinfo override_dh_installmenu override_dh_installmime:
+override_dh_installmodules override_dh_installlogcheck:
+override_dh_installpam override_dh_installppp override_dh_installudev override_dh_installwm:
+override_dh_installxfonts override_dh_gconf override_dh_icons override_dh_perl override_dh_usrlocal:
+override_dh_installcron override_dh_installdebconf:
+override_dh_installlogrotate override_dh_installgsettings:
